--- a/views/partials/item.ejs
+++ b/views/partials/item.ejs
@@ -1,8 +1,8 @@
 <li>
-    <h2><%= name %> <span class="price">$<%= price %></span></h2>
+    <h2><%= name %> <span class="price">$<%= price * quantity %></span></h2>
     <form action="/cart/update" method="post" class="update">
         <input type="hidden" name="id" value="<%= id %>" />
-        <input type="number" name="quantity" value="1" id="quantity">
+        <input type="number" name="quantity" value="<%= quantity %>" id="quantity">
         <button type="submit">
             <i class="fa-solid fa-sync"></i>
         </button>
@@ -12,5 +12,8 @@
         <button type="submit">
             <i class="fa-solid fa-times"></i>
         </button>
+    </form>
+    <form action="/checkout/process" method="post">
+        <button type="submit">Pagar</button>
     </form>
 </li>
